mobile and desktop version

--- a/index.html
+++ b/index.html
@@ -12,32 +12,41 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <a href="/">
+      <header class="header">
+        <a href="/" class="header__logo">
           <img src="./images/logo.svg" alt="logo" />
         </a>
       </header>
 
-      <main>
-        <figure>
+      <main class="mockups">
+        <figure class="mockups__figure">
           <img src="./images/illustration-mockups.svg" alt="mockups" />
         </figure>
-        <div>
+        <div class="mockups__description">
           <h1>
             Build the community your fans will love
           </h1>
           <p>
-            Build The Community Your Fans Will Love Huddle re-imagines the way
-            we build communities. You have a voice, but so does your audience.
-            Create connections with your users as you engage in genuine
-            discussion.
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
           </p>
-          <button>Register</button>
+          <button type="button" class="button">Register</button>
         </div>
       </main>
 
-      <footer>
-        <span><i class="fa fa-facebook-f"></i></span>
+      <footer class="footer">
+        <a href="https://www.facebook.com" target="_blank">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+
+        <a href="https://www.twitter.com/jordytirado20" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+
+        <a href="https://www.instagram.com" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
       </footer>
     </div>
   </body>
